Fix pagination overflow style

--- a/assets/sass/_index.scss
+++ b/assets/sass/_index.scss
@@ -22,7 +22,7 @@
     margin-top: 1.6rem;
     display: flex;
     flex-wrap: nowrap;
-    overflow-x: scroll;
+    overflow-x: auto;
 
     > * + * {
       margin-left: 0.5rem;
